--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-	<link rel="stylesheet" type="text/css" href="index.css">.
+	<title>
+		Home
+	</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<header>
 		</header>
 	<body>
