--- a/articles.html
+++ b/articles.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
 <html>
+	<title>
+		Article
+	</title>
 	<link rel="stylesheet" type="text/css" href="index.css">.
 	<header>
-		</header>
+	</header>
 	<body>
 	<div class="main-bdy">	
 		<div class="toolbar-items">
