--- a/aboutme.html
+++ b/aboutme.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 
 <html>
+	<title>About Me</title
 	<link rel="stylesheet" type="text/css" href="index.css" />
 	<link rel="stylesheet" type="text/css" href="css/aboutme.css" />
 	<header>
-		</header>
+	</header>
 	<body>
 	<div class="main-bdy">	
 		<div class="toolbar-items">
