--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-	<title>About Me</title
+	<title>About Me</title>
 	<link rel="stylesheet" type="text/css" href="index.css" />
 	<link rel="stylesheet" type="text/css" href="css/aboutme.css" />
 	<header>
