--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="icon" href="assets/45704.jpg">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 
     
 
@@ -95,13 +94,13 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" href="https://github.com/daltera"><i style="font-size: 2rem; color: white; margin: 8px" class="bi bi-github"></i> @daltera</a>
+            <a class="nav-link active" href="https://github.com/daltera" target="_blank"><i style="font-size: 1.5rem; color: white; margin: 8px" class="bi bi-github"></i> @daltera</a>
           </li>
           <li class="nav-item">
-            <a  class="nav-link active"href="https://www.linkedin.com/in/muhammad-al-terra-b87a891a0/"><i style="font-size: 2rem;color: white; margin: 8px" class="bi bi-linkedin"></i> Muhammad Al Terra</a>
+            <a  class="nav-link active"href="https://www.linkedin.com/in/muhammad-al-terra-b87a891a0/" target="_blank"><i style="font-size: 1.5rem;color: white; margin: 8px" class="bi bi-linkedin"></i> Muhammad Al Terra</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="https://www.instagram.com/zipizi.space/"><i style="font-size: 2rem;color: white; margin: 8px" class="bi bi-instagram"></i> @zipizi.space</a>
+            <a class="nav-link active" href="https://www.instagram.com/zipizi.space/" target="_blank"><i style="font-size: 1.5rem;color: white; margin: 8px" class="bi bi-instagram"></i> @zipizi.space</a>
           </li>
         </ul>
       </div>
@@ -173,43 +172,43 @@
     <!-- START THE FEATURETTES -->
     <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/samsung.png"/></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Samsung</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/samsung.png"/></svg>
         <h2 class="fw-normal">Global Software Engineer at Samsung Research Indonesia</h2>
         <p>Responsible for exploration and development of big data utilities with Java</p>
-        <p><a class="btn btn-secondary" href="https://www.samsung.com/id/srin/">View company &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://www.samsung.com/id/srin/" target="_blank">View company &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/durianpay.svg"/></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>DurianPay</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/durianpay.svg"/></svg>
         <h2 class="fw-normal">Software Engineer at DurianPay</h2>
         <p>Responsible for front end web development, maintenance, and debugging.</p>
-        <p><a class="btn btn-secondary" href="https://durianpay.id/">View company &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://durianpay.id/" target="_blank">View company &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/bahasaai.png"/></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Bahasa.ai</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/bahasaai.png"/></svg>
         <h2 class="fw-normal">Software Engineer at Bahasa.ai</h2>
         <p>Responsible for research and development for mobile Bahasa.ai applications.</p>
-        <p><a class="btn btn-secondary" href="https://bahasa.ai/">View company &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://bahasa.ai/" target="_blank">View company &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
     <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/xtremax.png"/></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Xtremax</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/xtremax.png"/></svg>
         <h2 class="fw-normal">Database Administrator at Xtremax</h2>
         <p>Responsible for maintenance, setting up, and infrastructure of databases at Xtremax.</p>
-        <p><a class="btn btn-secondary" href="https://xtremax.com/">View company &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://xtremax.com/" target="_blank">View company &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/edukasystem.png"/></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>EdukaSystem</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/edukasystem.png"/></svg>
         <h2 class="fw-normal">Software Engineer at EdukaSystem</h2>
         <p>Responsible for front end elements for quizzing, landing page, and content management.</p>
-        <p><a class="btn btn-secondary" href="https://edukasystem.com/">View company &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://edukasystem.com/" target="_blank">View company &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><image width="100%" height="100%" href="assets/itb.png"/></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>ITB</title><rect width="100%" height="100%" fill="#777"/><image width="100%" height="100%" href="assets/itb.png"/></svg>
         <h2 class="fw-normal">Lab Assistant at Graphics & Artificial Intelligence Lab Institut Teknologi Bandung</h2>
         <p>Responsible for assisting students with AI courses, and evaluating AI projects of other undergraduates</p>
-        <p><a class="btn btn-secondary" href="https://stei.itb.ac.id/penelitian/laboratorium/">View company &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://stei.itb.ac.id/penelitian/laboratorium/" target="_blank">View company &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -222,7 +221,7 @@
         <p class="lead">Zipizi is a service to assist students incapable of making progress in their theses or final projects. Zipizi offers services like consulting, counseling, and mini-classes. We help students to decide their topic, find resources for their research, and write better. The project takes advantage of Wordpress practicality with custom codes in HTML, JavaScript, CSS, PHP</p>
       </div>
       <div class="col-md-5">
-        <a href="https://zipizi.space">
+        <a href="https://zipizi.space" target="_blank">
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
             <title>Zipizi</title>
             <image href="assets/zipiziscreen.png" height="500" width="500"/>
@@ -240,10 +239,10 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">Scuderia, <span class="text-muted">A machine learning model to predict Forex prices</span></h2>
-        <p class="lead">Scuderia was a project I started with me and a couple of friends who were enthusiastic about the potential of machine learning to predict Forex prices. I provided the background knowledge, data, and together with my good friend Aditya and Leonardo discussed the architecture for the model</p>
+        <p class="lead">Scuderia was a project I started with a couple of friends who were enthusiastic about the potential of machine learning to predict Forex prices. I provided the background knowledge, data, and together with my good friends Aditya and Leonardo discussed the architecture for the model</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <a href="https://drive.google.com/drive/folders/19EyaG109g8lhTN_B59o99G9oS-xMd207?usp=sharing">
+        <a href="https://drive.google.com/drive/folders/19EyaG109g8lhTN_B59o99G9oS-xMd207?usp=sharing" target="_blank">
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
             <title>Scuderia</title>
             <image href="assets/model.png" height="500" width="500"/>
@@ -264,7 +263,7 @@
         <p class="lead">Bunglom is a sister idea to Zipizi. Still breathing the same spirit of bettering Indonesia's education, Bunglom focuses on Indonesian students in need of assistance and mentorship during contest participation. Bunglom is a project actively under development and will start to induct bright Indonesian students mid-February. The project takes advantage of Wordpress practicality with custom codes in HTML, JavaScript, CSS, PHP </p>
       </div>
       <div class="col-md-5">
-        <a href="https://bunglom.com">
+        <a href="https://bunglom.com" target="_blank">
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
             <title>Bunglom</title>
             <image href="assets/bunglom2.png" height="500" width="500"/>
@@ -285,7 +284,7 @@
         <p class="lead">When I took Formal Language Theory and Automata, I learned finite states and was tasked to map out all the possible states for a game of Tic-Tac-Toe. I was given liberty on the choice of programming language and I chose Pascal to improve my versatility in using uncommon programming language. </p>
       </div>
       <div class="col-md-5 order-md-1">
-        <a href="https://github.com/daltera/Never-Lose-TicTacToe">
+        <a href="https://github.com/daltera/Never-Lose-TicTacToe" target="_blank">
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
             <title>Tic-Tac-Toe</title>
             <image href="assets/tictactoe.png" height="500" width="500"/>
@@ -305,10 +304,10 @@
     <p>In addition to projects, my bachelor thesis was to create Turing Training, a tutoring service specifically designed for college students. The service is uncommon and non-existent for some majors. It was built as an e-marketplace where students can choose the appropriate tutors for their needs.</p>
     <div class="row" style="justify-content: center;">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false" style="border: 2px solid black; padding: 10px;"><title>Placeholder</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/turingtraining.png"/></svg>
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false" style="border: 2px solid black; padding: 10px;"><title>Turing Training</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/turingtraining.png"/></svg>
         <h2 class="fw-normal">My Paper (In English) describing Turing Training</h2>
         <p>This paper describes the details of Turing Training. From conception, its design, architecture, and analyses went through to ensure the program functions well</p>
-        <p><a class="btn btn-secondary" href="https://drive.google.com/file/d/1s0arQJv6_mFxVYztWYQ2XRCCWGxQhMWz/view?usp=sharing">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://drive.google.com/file/d/1s0arQJv6_mFxVYztWYQ2XRCCWGxQhMWz/view?usp=sharing" target="_blank">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -322,7 +321,7 @@
 </main>
 
 
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 
       
   </body>
