--- a/index.html
+++ b/index.html
@@ -211,6 +211,14 @@
         <p><a class="btn btn-secondary" href="https://stei.itb.ac.id/penelitian/laboratorium/" target="_blank">View company &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
+    <div class="row" style="justify-content: center;">
+      <div class="col-lg-4">
+        <svg class="bd-placeholder-img" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>AWS</title><rect width="100%" height="100%" fill="#FFF"/><image width="100%" height="100%" href="assets/aws.png"/></svg>
+        <h2 class="fw-normal">First AWS Student Ambassador for Indonesia</h2>
+        <p>Evangelizing the importance of cloud, inducting new students to AWS Educate Program, Organized Garuda Cloud Community</p>
+        <p><a class="btn btn-secondary" href="https://aws.com/" target="_blank">View company &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
 
     
     <hr class="featurette-divider">
