--- a/public/practice/index.html
+++ b/public/practice/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>AI Speaking Practice — Mockup</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/practice/style.css">
+  <link rel="stylesheet" href="/practice/styles.css">
 </head>
 
 <body>
